--- a/src/package.json
+++ b/src/package.json
@@ -14,10 +14,15 @@
     "author": "Golden Owl",
     "license": "ISC",
     "dependencies": {
+        "@babel/traverse": "^7.28.4",
+        "body-parser": "^1.20.3",
+        "braces": "^3.0.3",
+        "cross-spawn": "^7.0.6",
         "dotenv": "^16.3.1",
         "eslint-plugin-jest": "^27.4.0",
         "express": "^4.18.2",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "path-to-regexp": "^1.9.0"
     },
     "devDependencies": {
         "eslint": "^8.49.0",
