--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -31,4 +31,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "update image tag to ${{ github.event.workflow_run.head_sha }}" || echo "No changes to commit"
-          git push origin master
+          git push origin main 
